--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@
 body {
   height: 100svh;
   width: 100vw;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   font-weight: 700;
   background-color: #363636;
   color: #bebebe;
@@ -21,6 +21,18 @@ body {
   font-weight: 700;
   font-style: normal;
   text-align: left;
+  cursor: none;
+}
+
+.custom-cursor {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  pointer-events: none;
+  transition: transform 0.1s ease;
+  opacity: 0.75;
 }
 
 .overlay {
@@ -30,7 +42,7 @@ body {
   background: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: -1;
   pointer-events: none;
 }
 
@@ -52,7 +64,7 @@ body {
   height: 100%;
   display: flex; /* videos in row */
   transition: transform 1s ease-in-out;
-  z-index: -1;
+  z-index: -10;
 }
 
 .bg-video {
